// Copyright (c) 2020 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package headerpb;
option go_package = "github.com/iotexproject/iotex-core/blockchain/filedao/headerpb";

message FileHeader {
    string version = 1;
    string compressor = 2;
    uint64 blockStoreSize = 3;
    uint64 start = 4;
}

message FileTip {
    uint64 height = 1;
    bytes  hash = 2;
}
